# session-store

./: .gitignore  LICENSE  README.md  package.json  tsconfig.build.json  tsconfig.json
examples/: README.md
examples/python/: analyze_sessions.py
examples/rust/: Cargo.toml
examples/rust/src/: main.rs
examples/typescript/: dump-all-sessions.ts  web-browser.ts
schema/: FileHistorySnapshot.schema.json  MessageEntry.schema.json  PersistedWorktreeSession.schema.json  RawEntry.schema.json  SessionDetail.schema.json  SessionLaunchInfo.schema.json  SessionListItem.schema.json  TaskNotification.schema.json  index.json
scripts/: validate-schemas.ts
src/: index.ts  types.ts
src/accessors/: getCustomTitle.ts  getSessionLaunchInfo.ts  getSessionMessageCwd.ts  getSessionTaskNotifications.ts  getSessionWorkDir.ts  getTranscriptMetadata.ts
src/cli/: smoke.ts
src/internal/: cache.ts  config.ts  entryClassification.ts  entryToMessage.ts  fileDiscovery.ts  gitRoot.ts  jsonl.ts  pathUtils.ts  resolve.ts  subagents.ts  summary.ts  titleExtraction.ts  titleText.ts
src/scan/: scanProjects.ts  scanSession.ts  scanSessionFileHistorySnapshots.ts  scanSessionMessages.ts
tests/: accessors.test.ts  pathUtils.test.ts  scanProjects.test.ts  scanSession.test.ts  schema.test.ts  titleText.test.ts
tests/helpers/: fixtures.ts  tmpConfigDir.ts  writeSessionFile.ts
